# m18-residences-server

./: .env.example  .env.test.example  .gitignore  Cargo.toml  README.md  jest.config.ts  package.json  tsconfig.json
db/: db.sql
migration/src/: lib.rs  m20250820_010340_baseline.rs
prisma/: schema.prisma  seed.ts
src/: index.ts  lib.rs  main.rs  test_utils.rs
src/config/: Database.ts
src/controllers/: AuthController.ts  BaseController.ts  BillController.ts  ElectricityReadingController.ts  RoomController.ts  TenantController.ts
src/entities/: additional_charge.rs  bill.rs  electricity_reading.rs  mod.rs  room.rs  tenant.rs
src/handlers/: auth_handler.rs  bill_handler.rs  electricity_reading_handler.rs  mod.rs  room_handler.rs  signed_url_handler.rs  tenant_handler.rs
src/interfaces/: Bill.ts  ElectricityReading.ts  Room.ts  Tenant.ts
src/lib/: global.d.ts  prisma.ts  r2.ts
src/middleware/: authMiddleware.ts  cors.rs  db.rs  errorHandler.ts  jwt.rs  mod.rs  r2.ts
src/repository/: AdditionalChareRepository.ts  AdditionalChargeRepository.ts  BaseRepository.ts  BillRepository.ts  ElectricityReadingRepository.ts  RoomRepository.ts  TenantRepository.ts  additional_charge_repo.rs  bill_repo.rs  electricity_reading_repo.rs  mod.rs  room_repo.rs  tenant_repo.rs
src/routes/: AuthRoute.ts  BaseRoute.ts  BillRoute.ts  ElectricityReadingRoute.ts  RoomRoute.ts  TenantRoute.ts  auth_routes.rs  bill_routes.rs  electricity_reading_routes.rs  mod.rs  room_routes.rs  signed_url_routes.rs  tenant_routes.rs
src/services/: auth_service.rs  bill_service.rs  mod.rs  (+4 more)
(+12 files in other folders)
