[package]
name = "rental-management-system-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
axum-server = "0.7.2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
chrono = { version = "0.4.41", features = ["serde"] }
aws-sdk-s3 = "1.103.0"
aws-types = "1.3.8"
